test/compilable/imports/test67a.d
module imports.test67a;

import test67;

class Base
{
    I create() {
        return null;
    }
}

class Derived : Base
{
    SubI create() {
        return null;
    }
}


